Add enterprise managment
